--- a/pos/templates/pos/reportes.html
+++ b/pos/templates/pos/reportes.html
@@ -135,7 +135,7 @@
                             <td>{{ item.nombre }}</td>
                             <td>{{ item.atributo }}</td>
                             <td class="text-end">
-                                <span class="badge badge-modern badge-primary-modern">{{ item.total_ventas|default:0|intcomma }}</span>
+                                <span class="badge badge-modern badge-success-modern">{{ item.total_ventas|default:0|intcomma }}</span>
                             </td>
                             <td class="text-end">
                                 <strong class="{% if item.stock_actual > 0 %}text-primary{% elif item.stock_actual == 0 %}text-warning{% else %}text-danger{% endif %}">
