--- a/pos/templates/pos/reportes.html
+++ b/pos/templates/pos/reportes.html
@@ -138,7 +138,7 @@
                             <td>{{ item.nombre }}</td>
                             <td>{{ item.atributo }}</td>
                             <td class="text-end">
-                                <span class="badge badge-modern badge-success-modern">{{ item.total_entradas|default:0|intcomma }}</span>
+                                <span class="badge badge-modern badge-success-modern">{{ item.total_ingresos_mercancia|default:0|intcomma }}</span>
                             </td>
                             <td class="text-end">
                                 <span class="badge badge-modern badge-success-modern">{{ item.total_ventas|default:0|intcomma }}</span>
